--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,11 +1,6 @@
-add_library(core
-        svg.cpp
-        json.cpp
-        descriptions.cpp
-        transport_router.cpp
-        transport_render.cpp
-        transport_guide.cpp
-        request.cpp)
+file(GLOB source_files CONFIGURE_DEPENDS "*.cpp")
+
+add_library(core ${source_files})
 
 target_include_directories(core
         INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
