--- a/transport/CMakeLists.txt
+++ b/transport/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB source_files CONFIGURE_DEPENDS "*.cpp")
 
-add_library(core ${source_files})
+add_library(transport ${source_files})
 
-target_include_directories(core
+target_include_directories(transport
         INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
         )
